Implement GET paths for returning JePL-related configuration
